5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1764_1580.log
== TEST (2019-05-22 11:40:00) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
f = 0
a = 0
r = 0
m = 0
while(size(notas[i]) == size(nomes[i])):
	if(notas[i] == -1):
		f = f + 1
	i = i + 1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:43:47) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
f = 0
a = 0
r = 0
m = 0
while(size(notas[i]) == size(nomes[i])):
	if(notas[i] == -1):
		f = f + 1
	i = i + 1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:52:24) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
f = 0
a = 0
r = 0
m = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	i = i + 1
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:20:18) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		faltaram = faltaram + 1
		i = i + 1
	if(notas[i]>=6):
		aprovados = aprovados + 1
		i = i + 1
	if(notas[i]<6 and notas[i]!= -1):
		reprovados = reprovados +1
		i = i + 1	
	if(notas[i]!= -1)
		media = media + sum(notas[i])/size(notas[i])
		i = i + 1
print(faltaram)
print(aprovados)
print(reprovados)
print(media)
-- ERROR:
File "XXXX", line 19
    if(notas[i]!= -1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:22:36) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		faltaram = faltaram + 1
		i = i + 1
	if(notas[i]>=6):
		aprovados = aprovados + 1
		i = i + 1
	if(notas[i]<6 and notas[i]!= -1):
		reprovados = reprovados +1
		i = i + 1	
	if(notas[i]!= -1):
		media = media + sum(notas[i])/size(notas[i])
		i = i + 1
print(faltaram)
print(aprovados)
print(reprovados)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:54:40) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i]>=6 and notas[i]<=10):
		aprovados = aprovados + 1
	if(notas[i]<6 and notas[i]>=0):
		reprovados = reprovados + 1
		i = i + 1	
	if(notas[i]>=0):
		media = media + notas[i]
		soma = soma + 1
	if(notas[i] == max(notas)):
		n = nomes[i]
	i = i + 1
print(faltaram)
print(aprovados)
print(reprovados)
print(round(sum(media)/soma,2))
print(n)
-- EXECUTION TIME:
1.17561
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 19, in <module>
    soma = soma + 1
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:55:39) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
soma = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i]>=6 and notas[i]<=10):
		aprovados = aprovados + 1
	if(notas[i]<6 and notas[i]>=0):
		reprovados = reprovados + 1
		i = i + 1	
	if(notas[i]>=0):
		media = media + notas[i]
		soma = soma + 1
	if(notas[i] == max(notas)):
		n = nomes[i]
	i = i + 1
print(faltaram)
print(aprovados)
print(reprovados)
print(round(sum(media)/soma,2))
print(n)
-- EXECUTION TIME:
0.966553
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
Notas: Nomes: 2
4
3
6.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas: Nomes: 1
0
5
nan
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nomes: 0
5
3
7.93
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:57:33) 
-- CODE:
from numpy import*
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
soma = 0
while(i<size(notas) and i<size(nomes)):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i]>=6 and notas[i]<=10):
		aprovados = aprovados + 1
	if(notas[i]<6 and notas[i]>=0):
		reprovados = reprovados + 1	
	if(notas[i]>=0):
		media = media + notas[i]
		soma = soma + 1
	if(notas[i] == max(notas)):
		n = nomes[i]
	i = i + 1
print(faltaram)
print(aprovados)
print(reprovados)
print(round(sum(media)/soma,2))
print(n)
-- EXECUTION TIME:
1.02867
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
